Runtime: Enabled setSpeak by default

--- a/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -56,7 +56,11 @@
       "removeRecipientMentions": false,
       "showTyping": false,
       "traceTranscript": false,
-      "useInspection": false
+      "useInspection": false,
+      "setSpeak": {
+        "voiceFontName": "en-US-AriaNeural",
+        "fallbackToTextForSpeechIfEmpty": true
+      }
     },
     "components": [],
     "skills": {
