update people tests

--- a/skills/declarative/tests/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
+++ b/skills/declarative/tests/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
@@ -33,7 +33,7 @@
     <None Include="TestAssets\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\whoSkill\**" Link="BotProject/%(RecursiveDir)%(Filename)%(Extension)">
+    <None Include="..\..\People\People\**" Link="BotProject/%(RecursiveDir)%(Filename)%(Extension)">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
