Updating appsettings.json to specify new format for telemetrySettings.

--- a/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -68,9 +68,11 @@
     },
     "storage": "",
     "telemetry": {
-        "instrumentationKey": "",
         "logActivities": true,
-        "logPersonalInformation": false
+        "logPersonalInformation": false,
+        "options": {
+          "connectionString": ""
+        }
     }
   }
 }
