--- a/packages/HelpAndCancel/package.json
+++ b/packages/HelpAndCancel/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/bot-components-helpandcancel",
   "version": "1.0.0",
-  "description": "Contains Adaptive Dialog assets to support Help and Cancel conversational flows in an Adaptive bot built on the Azure Bot Framework.",
+  "description": "Contains Adaptive Dialog assets to support Help and Cancel conversational flows in a bot built on the Azure Bot Framework.",
   "keywords": [
     "microsoft",
     "bot",
