--- a/packages/AdaptiveCards/Microsoft.Bot.Components.AdaptiveCards.csproj
+++ b/packages/AdaptiveCards/Microsoft.Bot.Components.AdaptiveCards.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>Microsoft.Bot.Components.AdaptiveCard</PackageId>
+    <PackageId>Microsoft.Bot.Components.AdaptiveCards</PackageId>
     <RepositoryUrl>https://github.com/microsoft/botframework-components/tree/main/packages/AdaptiveCards</RepositoryUrl>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Description>Composer triggers and actions for working with Adaptive Cards.</Description>
@@ -15,16 +15,16 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
     <DelaySign>true</DelaySign>
-    <PackageTags>msbot-component;msbot-action;msbot-trigger</PackageTags>
+    <PackageTags>msbot-action;msbot-trigger</PackageTags>
     <ContentTargetFolders>content</ContentTargetFolders>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AdaptiveCards.Templating" Version="1.2.1" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.13.0-rc2" />
-    <PackageReference Include="Microsoft.Bot.Connector" Version="4.13.0-rc2" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.13.0-rc2" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.13.0-rc2" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.13.0-rc4" />
+    <PackageReference Include="Microsoft.Bot.Connector" Version="4.13.0-rc4" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.13.0-rc4" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.13.0-rc4" />
   </ItemGroup>
 
   <ItemGroup>
