Add msbot-component tag back in

--- a/packages/Teams/Microsoft.Bot.Components.Teams.csproj
+++ b/packages/Teams/Microsoft.Bot.Components.Teams.csproj
@@ -16,7 +16,7 @@
     <Description>This library implements .NET support for adaptive dialogs with Microsoft Teams</Description>
     <Summary>This library implements .NET support for adaptive dialogs with Microsoft Teams</Summary>
     <ContentTargetFolders>content</ContentTargetFolders>
-    <PackageTags>msbot-action;msbot-trigger</PackageTags>
+    <PackageTags>msbot-component;msbot-action;msbot-trigger</PackageTags>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
     <DelaySign>true</DelaySign>
