--- a/packages/HelpAndCancel/package.json
+++ b/packages/HelpAndCancel/package.json
@@ -15,6 +15,7 @@
   "files": [
     "exported"
   ],
+  "homepage": "https://github.com/Microsoft/botframework-components/packages/HelpAndCancel/README.md",
   "repository": {
     "type": "git",
     "url": "https://github.com/Microsoft/botframework-components.git"
