--- a/packages/Teams/Microsoft.Bot.Components.Teams.csproj
+++ b/packages/Teams/Microsoft.Bot.Components.Teams.csproj
@@ -16,7 +16,7 @@
     <Summary>This library implements .NET support for adaptive dialogs with Microsoft Teams</Summary>
     <RepositoryUrl>https://github.com/Microsoft/botbuilder-components/packages/Teams/README.md</RepositoryUrl>
     <ContentTargetFolders>content</ContentTargetFolders>
-    <PackageTags>msbot-action;msbot-trigger</PackageTags>
+    <PackageTags>msbot-component;msbot-action;msbot-trigger</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
