--- a/packages/Teams/Microsoft.Bot.Components.Teams.csproj
+++ b/packages/Teams/Microsoft.Bot.Components.Teams.csproj
@@ -14,7 +14,7 @@
     <PackageId>Microsoft.Bot.Components.Teams</PackageId>
     <Description>This library implements .NET support for adaptive dialogs with Microsoft Teams</Description>
     <Summary>This library implements .NET support for adaptive dialogs with Microsoft Teams</Summary>
-    <RepositoryUrl>https://github.com/Microsoft/botbuilder-components/tree/main/packages/Teams/README.md</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Microsoft/botbuilder-components/tree/main/packages/Teams</RepositoryUrl>
     <ContentTargetFolders>content</ContentTargetFolders>
     <PackageTags>msbot-component;msbot-action;msbot-trigger</PackageTags>
   </PropertyGroup>
