Updating defaultLocale value in appsettings.json to 'en-us'.

--- a/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -1,7 +1,7 @@
 {
   "customFunctions": [],
   "defaultLanguage": "en-us",
-  "defaultLocale": "en-US",
+  "defaultLocale": "en-us",
   "downsampling": {
     "maxImbalanceRatio": -1
   },
