fix: consolidate package properties (#890)
* Add package READMEs as RepositoryUrl so that they are populated in Composer & add homepage property for npm packages.

* remove repositoryurl from build properties

* Remove msbot-component tag from build properties and add to project files

* Fix readme urls with working links

* Point to project directories rather than README specifically

* Add msbot-component tag to adaptivecards

--- a/packages/Teams/Microsoft.Bot.Components.Teams.csproj
+++ b/packages/Teams/Microsoft.Bot.Components.Teams.csproj
@@ -14,8 +14,9 @@
     <PackageId>Microsoft.Bot.Components.Teams</PackageId>
     <Description>This library implements .NET support for adaptive dialogs with Microsoft Teams</Description>
     <Summary>This library implements .NET support for adaptive dialogs with Microsoft Teams</Summary>
+    <RepositoryUrl>https://github.com/Microsoft/botbuilder-components/tree/main/packages/Teams</RepositoryUrl>
     <ContentTargetFolders>content</ContentTargetFolders>
-    <PackageTags>msbot-action;msbot-trigger</PackageTags>
+    <PackageTags>msbot-component;msbot-action;msbot-trigger</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
