--- a/packages/Graph/Microsoft.Bot.Components.Graph.csproj
+++ b/packages/Graph/Microsoft.Bot.Components.Graph.csproj
@@ -10,10 +10,12 @@
     <VersionPrefix>1.0.0</VersionPrefix>
     <Description>Plugin component for MSGraph custom action</Description>
     <Summary>Plugin component for MSGraph custom action.</Summary>
+    <RepositoryUrl>https://github.com/Microsoft/botbuilder-components/tree/main/packages/Graph</RepositoryUrl>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
     <DelaySign>true</DelaySign>
     <ContentTargetFolders>content</ContentTargetFolders>
+    <PackageTags>msbot-component;msbot-action</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
