--- a/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
+++ b/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
@@ -10,7 +10,7 @@
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <projectUrl>https://github.com/Microsoft/botframework-components/tree/main/packages/Welcome</projectUrl>
         <releaseNotes>First version of welcome package</releaseNotes>
-        <description>An Adaptive Dialog for greeting new and returning users</description>
+        <description>An Adaptive Dialog for greeting new and returning users on first interaction with your bot built on the Azure Bot Framework.</description>
         <tags>msbot-component msbot-content conversationalcore welcome preview</tags>
         <dependencies>
             <dependency id="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" version="4.13.0-rc4" />
