--- a/packages/AdaptiveCards/Microsoft.Bot.Components.AdaptiveCards.csproj
+++ b/packages/AdaptiveCards/Microsoft.Bot.Components.AdaptiveCards.csproj
@@ -7,7 +7,7 @@
 
   <PropertyGroup>
     <PackageId>Microsoft.Bot.Components.AdaptiveCards</PackageId>
-    <RepositoryUrl>https://github.com/microsoft/botframework-components/tree/main/packages/AdaptiveCards</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/microsoft/botframework-components/tree/main/packages/AdaptiveCards</PackageProjectUrl>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Description>Composer triggers and actions for working with Adaptive Cards.</Description>
     <Summary>Composer triggers and actions for working with Adaptive Cards.</Summary>
