--- a/packages/Graph/Microsoft.Bot.Components.Graph.csproj
+++ b/packages/Graph/Microsoft.Bot.Components.Graph.csproj
@@ -8,8 +8,8 @@
   <PropertyGroup>
     <PackageId>Microsoft.Bot.Components.Graph</PackageId>
     <VersionPrefix>1.0.0</VersionPrefix>
-    <Description>Plugin component for MSGraph custom action</Description>
-    <Summary>Plugin component for MSGraph custom action.</Summary>
+    <Description>Custom actions for the MS Graph API for Bot Framework bots.</Description>
+    <Summary>A set of custom actions for working with the Microsoft Graph API from Bot Framework Composer.</Summary>
     <RepositoryUrl>https://github.com/Microsoft/botbuilder-components/tree/main/packages/Graph</RepositoryUrl>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
