--- a/packages/Graph/Microsoft.Bot.Components.Graph.csproj
+++ b/packages/Graph/Microsoft.Bot.Components.Graph.csproj
@@ -10,7 +10,7 @@
     <VersionPrefix>1.0.0</VersionPrefix>
     <Description>Custom actions for the MS Graph API for Bot Framework bots.</Description>
     <Summary>A set of custom actions for working with the Microsoft Graph API from Bot Framework Composer.</Summary>
-    <RepositoryUrl>https://github.com/Microsoft/botbuilder-components/tree/main/packages/Graph</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Microsoft/botframework-components/tree/main/packages/Graph</PackageProjectUrl>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
     <DelaySign>true</DelaySign>
