Update skill host endpoint setting

--- a/skills/declarative/Calendar/Calendar/settings/appsettings.json
+++ b/skills/declarative/Calendar/Calendar/settings/appsettings.json
@@ -71,5 +71,5 @@
   ],
   "customFunctions": [],
   "importedLibraries": [],
-  "skillHostEndpoint": "http://localhost:3980/api/skills"
+  "skillHostEndpoint": ""
 }
