Update using templated appsettings

--- a/skills/declarative/Calendar/Calendar/settings/appsettings.json
+++ b/skills/declarative/Calendar/Calendar/settings/appsettings.json
@@ -1,75 +1,81 @@
 {
-  "feature": {
-    "UseShowTypingMiddleware": true,
-    "UseInspectionMiddleware": false,
-    "RemoveRecipientMention": false,
-    "UseSetSpeakMiddleware": true
-  },
-  "MicrosoftAppId": "",
-  "cosmosDb": {
-    "authKey": "",
-    "containerId": "botstate-container",
-    "cosmosDBEndpoint": "",
-    "databaseId": "botstate-db"
-  },
-  "applicationInsights": {
-    "InstrumentationKey": ""
-  },
-  "blobStorage": {
-    "connectionString": "",
-    "container": "transcripts"
-  },
-  "speech": {
-    "voiceFontName": "en-US-AriaNeural",
-    "fallbackToTextForSpeechIfEmpty": true
-  },
-  "luis": {
-    "name": "Calendar",
-    "authoringEndpoint": "",
-    "endpoint": "",
-    "authoringRegion": "westus",
-    "defaultLanguage": "en-us",
-    "environment": "composer",
-    "directVersionPublish": true
-  },
-  "luFeatures": {
-    "enablePattern": true,
-    "enableMLEntities": true,
-    "enableListEntities": true,
-    "enableCompositeEntities": true,
-    "enablePrebuiltEntities": true,
-    "enableRegexEntities": true,
-    "enablePhraseLists": true
-  },
-  "publishTargets": [],
-  "qna": {
-    "knowledgebaseid": "",
-    "hostname": "",
-    "qnaRegion": "westus"
-  },
-  "telemetry": {
-    "logPersonalInformation": false,
-    "logActivities": true
-  },
-  "runtime": {
-    "customRuntime": true,
-    "path": "../",
-    "command": "dotnet run --project Calendar.csproj",
-    "key": "adaptive-runtime-dotnet-webapp"
-  },
+  "customFunctions": [],
+  "defaultLanguage": "en-us",
+  "defaultLocale": "en-US",
   "downsampling": {
     "maxImbalanceRatio": -1
   },
-  "skillConfiguration": {
-    "isSkill": true,
-    "allowedCallers": []
-  },
-  "skill": {},
-  "defaultLanguage": "en-us",
+  "importedLibraries": [],
   "languages": [
     "en-us"
   ],
-  "customFunctions": [],
-  "importedLibraries": [],
-  "skillHostEndpoint": ""
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "luFeatures": {
+    "enableCompositeEntities": true,
+    "enableListEntities": true,
+    "enableMLEntities": true,
+    "enablePattern": true,
+    "enablePhraseLists": true,
+    "enablePrebuiltEntities": true,
+    "enableRegexEntities": true
+  },
+  "luis": {
+    "authoringEndpoint": "",
+    "authoringRegion": "",
+    "defaultLanguage": "en-us",
+    "endpoint": "",
+    "environment": "composer",
+    "name": "Calendar"
+  },
+  "MicrosoftAppId": "",
+  "publishTargets": [],
+  "qna": {
+    "hostname": "",
+    "knowledgebaseid": "",
+    "qnaRegion": "westus"
+  },
+  "runtime": {
+    "command": "dotnet run --project Calendar.csproj",
+    "customRuntime": true,
+    "key": "adaptive-runtime-dotnet-webapp",
+    "path": "../"
+  },
+  "runtimeSettings": {
+    "adapters": [],
+    "features": {
+      "removeRecipientMentions": false,
+      "showTyping": false,
+      "traceTranscript": false,
+      "useInspection": false,
+      "setSpeak": {
+        "voiceFontName": "en-US-AriaNeural",
+        "fallbackToTextForSpeechIfEmpty": true
+      }
+    },
+    "components": [
+      {
+        "name": "Microsoft.Bot.Components.Graph",
+        "settingsPrefix": "Microsoft.Bot.Components.Graph"
+      }
+    ],
+    "skills": {
+      "allowedCallers": []
+    },
+    "storage": "",
+    "telemetry": {
+      "instrumentationKey": "",
+      "logActivities": true,
+      "logPersonalInformation": false
+    }
+  },
+  "oauthConnectionName": "",
+  "defaultValue": {
+    "duration": 30
+  }
 }
