--- a/skills/declarative/whoSkill/whoSkill/settings/appsettings.json
+++ b/skills/declarative/whoSkill/whoSkill/settings/appsettings.json
@@ -1,5 +1,53 @@
 {
+  "customFunctions": [],
+  "defaultLanguage": "en-us",
+  "defaultLocale": "en-US",
+  "downsampling": {
+    "maxImbalanceRatio": -1
+  },
+  "importedLibraries": [],
+  "languages": [
+    "en-us"
+  ],
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "luFeatures": {
+    "enableCompositeEntities": true,
+    "enableListEntities": true,
+    "enableMLEntities": true,
+    "enablePattern": true,
+    "enablePhraseLists": true,
+    "enablePrebuiltEntities": true,
+    "enableRegexEntities": true
+  },
+  "luis": {
+    "authoringEndpoint": "",
+    "authoringRegion": "westus",
+    "defaultLanguage": "en-us",
+    "endpoint": "",
+    "environment": "composer",
+    "name": "People"
+  },
+  "MicrosoftAppId": "",
+  "publishTargets": [],
+  "qna": {
+    "hostname": "",
+    "knowledgebaseid": "",
+    "qnaRegion": "westus"
+  },
+  "runtime": {
+    "command": "dotnet run --project whoSkill.csproj",
+    "customRuntime": true,
+    "key": "adaptive-runtime-dotnet-webapp",
+    "path": "../"
+  },
   "runtimeSettings": {
+    "adapters": [],
     "features": {
       "removeRecipientMentions": false,
       "showTyping": false,
@@ -10,7 +58,12 @@
         "fallbackToTextForSpeechIfEmpty": true
       }
     },
-    "components": [],
+    "components": [
+      {
+        "name": "Microsoft.Bot.Components.Graph",
+        "settingsPrefix": "Microsoft.Bot.Components.Graph"
+      }
+    ],
     "skills": {
       "allowedCallers": []
     },
@@ -21,73 +74,5 @@
       "logPersonalInformation": false
     }
   },
-  "feature": {
-    "UseShowTypingMiddleware": false,
-    "UseInspectionMiddleware": false,
-    "RemoveRecipientMention": false,
-    "UseSetSpeakMiddleware": true
-  },
-  "MicrosoftAppId": "",
-  "cosmosDb": {
-    "authKey": "",
-    "containerId": "botstate-container",
-    "cosmosDBEndpoint": "",
-    "databaseId": "botstate-db"
-  },
-  "applicationInsights": {
-    "InstrumentationKey": ""
-  },
-  "blobStorage": {
-    "connectionString": "",
-    "container": "transcripts"
-  },
-  "speech": {
-    "voiceFontName": "en-US-AriaNeural",
-    "fallbackToTextForSpeechIfEmpty": true
-  },
-  "luis": {
-    "name": "whoSkill",
-    "authoringEndpoint": "",
-    "endpoint": "",
-    "authoringRegion": "westus",
-    "defaultLanguage": "en-us",
-    "environment": "composer",
-    "directVersionPublish": true
-  },
-  "luFeatures": {
-    "enablePattern": true,
-    "enableMLEntities": true,
-    "enableListEntities": true,
-    "enableCompositeEntities": true,
-    "enablePrebuiltEntities": true,
-    "enableRegexEntities": true,
-    "enablePhraseLists": true
-  },
-  "publishTargets": [],
-  "qna": {
-    "knowledgebaseid": "",
-    "hostname": "",
-    "qnaRegion": "westus"
-  },
-  "telemetry": {
-    "logPersonalInformation": false,
-    "logActivities": true
-  },
-  "runtime": {
-    "customRuntime": true,
-    "path": "../",
-    "command": "dotnet run --project whoSkill.csproj",
-    "key": "adaptive-runtime-dotnet-webapp"
-  },
-  "downsampling": {
-    "maxImbalanceRatio": -1
-  },
-  "skill": {},
-  "defaultLanguage": "en-us",
-  "languages": [
-    "en-us"
-  ],
-  "customFunctions": [],
-  "importedLibraries": [],
-  "skillHostEndpoint": ""
+  "oauthConnectionName": ""
 }
