Update sln and project

--- a/tests/skills/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
+++ b/tests/skills/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\common\Microsoft.Bot.Dialogs.Tests.Common.csproj" />
-    <ProjectReference Include="..\..\..\..\packages\Graph\Microsoft.Bot.Components.Graph.csproj" />
+    <ProjectReference Include="..\..\..\packages\Graph\Microsoft.Bot.Components.Graph.csproj" />
   </ItemGroup>
 
   <ItemGroup>
