Update reference path

--- a/tests/skills/common/Microsoft.Bot.Dialogs.Tests.Common.csproj
+++ b/tests/skills/common/Microsoft.Bot.Dialogs.Tests.Common.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\..\..\packages\Graph\Microsoft.Bot.Components.Graph.csproj" />
+		<ProjectReference Include="..\..\..\packages\Graph\Microsoft.Bot.Components.Graph.csproj" />
 	</ItemGroup>
 
 </Project>
