--- a/tests/skills/calendarSkill/Microsoft.Bot.Dialogs.Tests.CalendarSkill.csproj
+++ b/tests/skills/calendarSkill/Microsoft.Bot.Dialogs.Tests.CalendarSkill.csproj
@@ -32,7 +32,7 @@
     <None Include="TestAssets\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Calendar\Calendar\**" Link="BotProject/%(RecursiveDir)%(Filename)%(Extension)">
+    <None Include="..\..\..\skills\declarative\Calendar\Calendar\**" Link="BotProject/%(RecursiveDir)%(Filename)%(Extension)">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
