--- a/tests/skills/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
+++ b/tests/skills/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
@@ -33,7 +33,7 @@
     <None Include="TestAssets\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\..\skills\declarative\whoSkill\**" Link="BotProject/%(RecursiveDir)%(Filename)%(Extension)">
+    <None Include="..\..\..\skills\declarative\whoSkill\whoSkill\**" Link="BotProject/%(RecursiveDir)%(Filename)%(Extension)">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
