feat: .NET Functions Static File support (#941)
* Adding static file support to .NET Functions bots.

* Adding private modifier to TryGetFilePath() in StaticFilesTrigger for .NET Functions bot template.

--- a/generators/generator-bot-adaptive/generators/app/templates/dotnet/functions/botName.csproj
+++ b/generators/generator-bot-adaptive/generators/app/templates/dotnet/functions/botName.csproj
@@ -29,6 +29,9 @@
     <None Include="<%- settingsIncludePath %>appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="www\**\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
