--- a/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
+++ b/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
@@ -38,6 +38,10 @@
   <ItemGroup>
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.schema" />
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.uischema" />
+    <None Remove="Schemas\Microsoft.Telephony.PauseRecording.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.PauseRecording.uischema" />
+    <None Remove="Schemas\Microsoft.Telephony.ResumeRecording.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.ResumeRecording.uischema" />
   </ItemGroup>
 
   <PropertyGroup>
