--- a/packages/Teams/js/package.json
+++ b/packages/Teams/js/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "build": "tsc -b",
     "clean": "rimraf _ts3.4 lib tsconfig.tsbuildinfo",
+    "lint": "eslint . --ext .js,.ts",
     "postbuild": "downlevel-dts lib _ts3.4/lib --checksum"
   },
   "files": [
@@ -44,16 +45,15 @@
     "botbuilder-dialogs-adaptive": "~4.13.0-preview",
     "botbuilder-dialogs-adaptive-runtime-core": "~4.13.0-preview",
     "botbuilder-dialogs-declarative": "~4.13.0-preview",
-    "botbuilder-stdlib": "~4.13.0-internal"
-  },
-  "dependencies": {
-    "lodash": "^4.17.19"
+    "botbuilder-stdlib": "~4.13.0-internal",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@standardlabs/downlevel-dts": "^0.7.5",
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash": "^4.14.168",
-    "@types/node-fetch": "^2.5.10",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "adaptive-expressions": "4.13.0",
     "botbuilder": "4.13.0",
     "botbuilder-dialogs": "4.13.0",
@@ -61,6 +61,8 @@
     "botbuilder-dialogs-adaptive-runtime-core": "4.13.0-preview",
     "botbuilder-dialogs-declarative": "4.13.0-preview",
     "botbuilder-stdlib": "4.13.0-internal",
+    "eslint": "latest",
+    "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.5"
   }
