--- a/packages/Teams/js/.eslintrc.json
+++ b/packages/Teams/js/.eslintrc.json
@@ -4,5 +4,18 @@
   "extends": [
     "../../../.eslintrc.json",
     "plugin:@typescript-eslint/recommended"
-  ]
+  ],
+  "ignorePatterns": ["lib"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "args": "after-used",
+        "argsIgnorePattern": "^_",
+        "caughtErrors": "all",
+        "caughtErrorsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
+    ]
+  }
 }
