Adding 'generated/' to .gitignore included in generators.

--- a/generators/generator-bot-adaptive/generators/app/templates/dotnet/webapp/.gitignore
+++ b/generators/generator-bot-adaptive/generators/app/templates/dotnet/webapp/.gitignore
@@ -4,6 +4,8 @@
 **/[Pp]ackages/*
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
+# Generated folder and contents produced by Bot Framework Composer.
+generated/
 
 !Properties/launchSettings.json
 !packages/packages.json
