fix dotnet test reference

--- a/tests/packages/Microsoft.Bot.Components.Teams.Tests/Microsoft.Bot.Components.Teams.Tests.csproj
+++ b/tests/packages/Microsoft.Bot.Components.Teams.Tests/Microsoft.Bot.Components.Teams.Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\packages\Teams\Microsoft.Bot.Components.Teams.csproj" />
+    <ProjectReference Include="..\..\..\packages\Teams\dotnet\Microsoft.Bot.Components.Teams.csproj" />
   </ItemGroup>
 
   <ItemGroup>
