Adding keyword 'msbot-multibot-project' to @microsoft/generator-bot-enterprise-assistant package.

--- a/generators/generator-bot-enterprise-assistant/package.json
+++ b/generators/generator-bot-enterprise-assistant/package.json
@@ -11,7 +11,8 @@
     "bf-template",
     "bf-dotnet-webapp",
     "bf-dotnet-functions",
-    "msbot-project-template"
+    "msbot-project-template",
+    "msbot-multibot-project"
   ],
   "license": "MIT",
   "author": "Bot Framework",
