--- a/generators/generator-bot-adaptive/package.json
+++ b/generators/generator-bot-adaptive/package.json
@@ -31,12 +31,12 @@
     "yeoman-generator": "^1.1.1"
   },
   "devDependencies": {
+    "ejs": "^3.1.6",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
     "eslint-plugin-prettier": "latest",
     "mocha": "^8.3.2",
     "prettier": "latest",
-    "yeoman-assert": "^3.1.1",
     "yeoman-test": "^6.0.0"
   }
 }
