--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "env": {
-    "es6": true,
+    "es2017": true,
+    "mocha": true,
     "node": true
   },
   "extends": ["eslint:recommended"],
