--- a/generators/generator-bot-core-qna/package.json
+++ b/generators/generator-bot-core-qna/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint -c ../../.eslintrc.json ."
   },
   "dependencies": {
-    "@microsoft/generator-bot-adaptive": "workspace:^1.0.0-preview",
+    "@microsoft/generator-bot-adaptive": "workspace:^1.0.0",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
