generator-bot-adaptive: Updated default speak voice

--- a/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -55,7 +55,7 @@
       "traceTranscript": false,
       "useInspection": false,
       "setSpeak": {
-        "voiceFontName": "en-US-AriaNeural",
+        "voiceFontName": "en-US-JennyNeural",
         "fallbackToTextForSpeechIfEmpty": true
       }
     },
