lock package versions

--- a/packages/Teams/js/package.json
+++ b/packages/Teams/js/package.json
@@ -43,13 +43,13 @@
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
-    "adaptive-expressions": "~4.14.0-rc1",
-    "botbuilder": "~4.14.0-rc1",
-    "botbuilder-dialogs": "~4.14.0-rc1",
-    "botbuilder-dialogs-adaptive": "~4.14.0-preview.rc1",
-    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview.rc1",
-    "botbuilder-dialogs-declarative": "~4.14.0-preview.rc1",
-    "botbuilder-stdlib": "~4.14.0-internal.rc1",
+    "adaptive-expressions": "4.14.0-rc1",
+    "botbuilder": "4.14.0-rc1",
+    "botbuilder-dialogs": "4.14.0-rc1",
+    "botbuilder-dialogs-adaptive": "4.14.0-preview.rc1",
+    "botbuilder-dialogs-adaptive-runtime-core": "4.14.0-preview.rc1",
+    "botbuilder-dialogs-declarative": "4.14.0-preview.rc1",
+    "botbuilder-stdlib": "4.14.0-internal.rc1",
     "eslint": "latest",
     "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
